# MinerU-OCR

./: .env.example  .gitignore  README.md  README_zh-CN.md  pyproject.toml
.agents/skills/mineru-ocr/: SKILL.md
.agents/skills/mineru-ocr/agents/: openai.yaml
.agents/skills/mineru-ocr/references/: mineru-api.md
docs/: ai-enhancement-plan.md
src/mineru_ocr/: __init__.py  cli.py  client.py  config.py  doubao_client.py  enhancer.py  errors.py  mcp_server.py  merge.py  models.py  planner.py  service.py  storage.py
tests/: test_client.py  test_config.py  test_merge.py  test_planner.py
