[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mineru-ocr-skill"
version = "0.1.0"
description = "Long-document OCR orchestration for the MinerU cloud API"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.28,<2",
  "platformdirs>=4.2,<5",
  "pydantic>=2.7,<3",
  "pypdf>=5,<7",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
test = ["pytest>=8,<10", "pytest-httpx>=0.30,<1"]

[project.scripts]
mineru-ocr = "mineru_ocr.cli:main"
mineru-ocr-mcp = "mineru_ocr.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mineru_ocr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

